{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 53,
  "lineage": "5067beac5a810b039096479ef7ee9d79",
  "resources": [
    {
      "module": "module.fabric.module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:network-acl/acl-e14cb921fe1ca9577",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.30.96.43/27",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 400,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.203.19",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 420,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.154.230/27",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 410,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.37.75",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 430,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.160.89/27",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 507,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.160.89/27",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 506,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.221.25/27",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.96.74/26",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 210,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.200.100",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 480,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 111,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.143.160/28",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 220,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.143.160/28",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 320,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.143.160/28",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 330,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.30.11.17/28",
                "from_port": 12221,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 450,
                "to_port": 12221
              },
              {
                "action": "allow",
                "cidr_block": "10.30.98.245/25",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 500,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.16.126",
                "from_port": 8530,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 8531
              },
              {
                "action": "allow",
                "cidr_block": "10.30.15.249/27",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 443
              }
            ],
            "id": "acl-e14cb921fe1ca9577",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.30.96.43/27",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 400,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.203.19",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 420,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.154.230/27",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 410,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.37.75",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 430,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.160.89/27",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 507,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.160.89/27",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 506,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.221.25/27",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.96.74/26",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 210,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.200.100",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 480,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 111,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.143.160/28",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 330,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.143.160/28",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 220,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.30.143.160/28",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 320,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.30.11.17/28",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 450,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.98.245/25",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 505,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.16.126",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.15.249/27",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "222222222222",
            "subnet_ids": [
              "subnet-d244fcb94b2a9cae2"
            ],
            "tags": {
              "Alias": "NA",
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "nacl-XXXX-prd-web-01",
              "Purpose": "Allow access to XXXX Intranets Web",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Alias": "NA",
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "nacl-XXXX-prd-web-01",
              "Purpose": "Allow access to XXXX Intranets Web",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:network-acl/acl-5a8d697760ea853d6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.30.96.43/27",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 400,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.203.19",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 420,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.154.230/27",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 410,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.37.75",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 430,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.0.0/16",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 505,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.194.92/28",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.96.74/26",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 210,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.200.100",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 480,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 111,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.11.17/28",
                "from_port": 12221,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 230,
                "to_port": 12221
              },
              {
                "action": "allow",
                "cidr_block": "10.30.11.17/28",
                "from_port": 25,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 220,
                "to_port": 25
              },
              {
                "action": "allow",
                "cidr_block": "10.30.207.195",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 600,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.16.126",
                "from_port": 8530,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 8531
              },
              {
                "action": "allow",
                "cidr_block": "10.30.15.249/27",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 443
              }
            ],
            "id": "acl-5a8d697760ea853d6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.30.96.43/27",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 400,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.203.19",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 420,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.154.230/27",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 410,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.37.75",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 430,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.0.0/16",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 505,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.194.92/28",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.96.74/26",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 210,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.200.100",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 480,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 111,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.11.17/28",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 230,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.207.195",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 600,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.30.16.126",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.15.249/27",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "222222222222",
            "subnet_ids": [
              "subnet-c6a8b5620638890eb"
            ],
            "tags": {
              "Alias": "NA",
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "nacl-XXXX-prd-app-01",
              "Purpose": "Allow access to XXXX Intranets App",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Alias": "NA",
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "nacl-XXXX-prd-app-01",
              "Purpose": "Allow access to XXXX Intranets App",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:network-acl/acl-bfcc02e800a25c319",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.30.221.25/27",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 210,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.194.92/28",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.27.15/28",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 220,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.200.100",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 480,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 111,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.16.126",
                "from_port": 8530,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 8531
              },
              {
                "action": "allow",
                "cidr_block": "10.30.15.249/27",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 443
              }
            ],
            "id": "acl-bfcc02e800a25c319",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.30.221.25/27",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 210,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.194.92/28",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.27.15/28",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 220,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.200.100",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 480,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 111,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.16.126",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.15.249/27",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "222222222222",
            "subnet_ids": [
              "subnet-5f374bdf86f452001"
            ],
            "tags": {
              "Alias": "NA",
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "nacl-XXXX-prd-db-01",
              "Purpose": "Allow access to XXXX Intranets DB",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Alias": "NA",
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "nacl-XXXX-prd-db-01",
              "Purpose": "Allow access to XXXX Intranets DB",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:network-acl/acl-ef9899653a4e0d2e3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.30.96.74/26",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.96.74/26",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-ef9899653a4e0d2e3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.30.96.74/26",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.96.74/26",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "222222222222",
            "subnet_ids": [
              "subnet-b29961b3b167b8e03"
            ],
            "tags": {
              "Alias": "NA",
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "nacl-XXXX-prd-fsx-01",
              "Purpose": "Allow access to XXXX Intranets FSx",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Alias": "NA",
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "nacl-XXXX-prd-fsx-01",
              "Purpose": "Allow access to XXXX Intranets FSx",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:network-acl/acl-20b5d0fa66552c131",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/8",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 220,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.199.95/25",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1000,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.194.92/28",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.200.100",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 480,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 110,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.16.126",
                "from_port": 8530,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 8531
              },
              {
                "action": "allow",
                "cidr_block": "10.30.15.249/27",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 443
              }
            ],
            "id": "acl-20b5d0fa66552c131",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/8",
                "from_port": 27000,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 230,
                "to_port": 27001
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/8",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 220,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.30.199.95/25",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1000,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.194.92/28",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.200.100",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 480,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.93.75/28",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 110,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.30.16.126",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.30.15.249/27",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "222222222222",
            "subnet_ids": [
              "subnet-2c1af4eaa890788df"
            ],
            "tags": {
              "Alias": "NA",
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "nacl-XXXX-prd-proxy-01",
              "Purpose": "Allow access to XXXX Intranets Webproxy",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Alias": "NA",
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "nacl-XXXX-prd-proxy-01",
              "Purpose": "Allow access to XXXX Intranets Webproxy",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.fabric.module.network_acl_rule",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.15.249/27",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2453105267",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.15.249/27",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3671410347",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.15.249/27",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2796770290",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.15.249/27",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-808795074",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.15.249/27",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3559156356",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.15.249/27",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2691418116",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1404679603",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2970278885",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": true,
            "from_port": 53,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-890711445",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": true,
            "from_port": 53,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1294812286",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1732086834",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-729934954",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": true,
            "from_port": 53,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3757527292",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": true,
            "from_port": 53,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2041150975",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-363509060",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2459283290",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": true,
            "from_port": 53,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1336517434",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": true,
            "from_port": 53,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-188630153",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.221.25/27",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1127686314",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.221.25/27",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3853105283",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.96.74/26",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2901756820",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 210,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.96.74/26",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-606562115",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 210,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.194.92/28",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2849463747",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 23,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.194.92/28",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3509420290",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 24,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.96.74/26",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1175795453",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 210,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 25,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.96.74/26",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-279142082",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 210,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 26,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.194.92/28",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-965324293",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 27,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.194.92/28",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2746923124",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 28,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.221.25/27",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3595289915",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 210,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 29,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.221.25/27",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1647601588",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 210,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 30,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.27.15/28",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1031568952",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 220,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 31,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.27.15/28",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4225106357",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 220,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 32,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": false,
            "from_port": 53,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3428702374",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-ef9899653a4e0d2e3",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 33,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": true,
            "from_port": 53,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1855888851",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-ef9899653a4e0d2e3",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 34,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": false,
            "from_port": 53,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2254653644",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-ef9899653a4e0d2e3",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 35,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": true,
            "from_port": 53,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4236615061",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-ef9899653a4e0d2e3",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 36,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.96.74/26",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1785417198",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-ef9899653a4e0d2e3",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 37,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.96.74/26",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2486264167",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-ef9899653a4e0d2e3",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 38,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.96.74/26",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2766742612",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-ef9899653a4e0d2e3",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 39,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.96.74/26",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1784206931",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-ef9899653a4e0d2e3",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 40,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.11.17/28",
            "egress": true,
            "from_port": 25,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2904722942",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 220,
            "to_port": 25
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 41,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.11.17/28",
            "egress": true,
            "from_port": 12221,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1122035392",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 230,
            "to_port": 12221
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 42,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.11.17/28",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1221584643",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 230,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 43,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.143.160/28",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3183804738",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 220,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 44,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.143.160/28",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1203957911",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 220,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 45,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.16.126",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2114778348",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 46,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.16.126",
            "egress": true,
            "from_port": 8530,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2193227626",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 8531
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 47,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.16.126",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1250479469",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 48,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.16.126",
            "egress": true,
            "from_port": 8530,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1750696451",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 8531
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 49,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.16.126",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-941618203",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 50,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.16.126",
            "egress": true,
            "from_port": 8530,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4161237445",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 8531
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 51,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.143.160/28",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-643845421",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 320,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 52,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.143.160/28",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2253139799",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 320,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 53,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.143.160/28",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1770931305",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 330,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 54,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.143.160/28",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3891172077",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 330,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 55,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.96.43/27",
            "egress": false,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3043493579",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 400,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 56,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.96.43/27",
            "egress": true,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3097786882",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 400,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 57,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.154.230/27",
            "egress": false,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-785205924",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 410,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 58,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.154.230/27",
            "egress": true,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2032838082",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 410,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 59,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.96.43/27",
            "egress": false,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-803418436",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 400,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 60,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.96.43/27",
            "egress": true,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2350924675",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 400,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 61,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.154.230/27",
            "egress": false,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3024518443",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 410,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 62,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.154.230/27",
            "egress": true,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1303288899",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 410,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 63,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.203.19",
            "egress": false,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1498650708",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 420,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 64,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.203.19",
            "egress": true,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3771253699",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 420,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 65,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.37.75",
            "egress": false,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3270956091",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 430,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 66,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.37.75",
            "egress": true,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-558242819",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 430,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 67,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.203.19",
            "egress": false,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3285757915",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 420,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 68,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.203.19",
            "egress": true,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3561814594",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 420,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 69,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.37.75",
            "egress": false,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1484645300",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 430,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 70,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.37.75",
            "egress": true,
            "from_port": -1,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-365045122",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 430,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 71,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.15.249/27",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3323515898",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 72,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.15.249/27",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-725345885",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 73,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-127274042",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 74,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": true,
            "from_port": 53,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3304688995",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 75,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-624611288",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 76,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.93.75/28",
            "egress": true,
            "from_port": 53,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-419626487",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 77,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.194.92/28",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3000598620",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 78,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.194.92/28",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2978349322",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 79,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.16.126",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-706956645",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 80,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.16.126",
            "egress": true,
            "from_port": 8530,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1935105948",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 8531
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 81,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/8",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3924474059",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 220,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 82,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/8",
            "egress": false,
            "from_port": 27000,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-677668619",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 230,
            "to_port": 27001
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 83,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/8",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3056357473",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 220,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 84,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.11.17/28",
            "egress": true,
            "from_port": 12221,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1303060909",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 450,
            "to_port": 12221
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 85,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.11.17/28",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2076422433",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 450,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 86,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.207.195",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3526081149",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 600,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 87,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.207.195",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-420359745",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 600,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 88,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.200.100",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2958556198",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 480,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 89,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.200.100",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3092621853",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-e14cb921fe1ca9577",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 480,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 90,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.200.100",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2228471207",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 480,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 91,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.200.100",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1387648884",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-5a8d697760ea853d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 480,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 92,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.200.100",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4131716305",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 480,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 93,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.200.100",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3270190258",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-bfcc02e800a25c319",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 480,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 94,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.200.100",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3833087407",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 480,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        },
        {
          "index_key": 95,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.30.200.100",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1236994795",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-20b5d0fa66552c131",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 480,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.network_acl.aws_network_acl.this"
          ]
        }
      ]
    },
    {
      "module": "module.fabric.module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.49.237/25",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-273fa9d73055c70ffcfd53e780f",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-1a4e47a2ec7c30df9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-3b40fc409699ab6b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.49.237/25",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-4dc7855c314c11d6ddc2b63fad0",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-446cbc99700bcf524",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-3b40fc409699ab6b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.49.237/25",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-f93e3529a45d88e80b8a6fe09dd",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-62beef039959107cd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-3b40fc409699ab6b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.49.237/25",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-8ab1b3f444956fc291c7643f2a9",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-9a295b01044590997",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-3b40fc409699ab6b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.98.245/25",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-c6c1a1c032f2304b8dc0da0792d",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-1a4e47a2ec7c30df9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-e7858b4c5ed6d9cdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.98.245/25",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-fb004765e176437553ede4f2ba3",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-446cbc99700bcf524",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-e7858b4c5ed6d9cdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.98.245/25",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-055316190473eeecc83716a3ae5",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-62beef039959107cd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-e7858b4c5ed6d9cdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.98.245/25",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-63a3b0bef1563ad45a331f7d465",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-9a295b01044590997",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-e7858b4c5ed6d9cdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "vgw-192b03a78868517a6",
            "id": "r-rtb-6401f1206b81457f3d7e524cba9",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-446cbc99700bcf524",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "vgw-192b03a78868517a6",
            "id": "r-rtb-518011e4d0148f364ea0a04679d",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-1a4e47a2ec7c30df9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.49.237/25",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-13839b924a0b7bf857ac48cf303",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-2634aa4bf9a5028cb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-3b40fc409699ab6b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.98.245/25",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-6e3f9aa4596725ad5bae219e4be",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-2634aa4bf9a5028cb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-e7858b4c5ed6d9cdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "vgw-192b03a78868517a6",
            "id": "r-rtb-e58b6b94ac4cad8c43890c08b6b",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-2634aa4bf9a5028cb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this"
          ]
        }
      ]
    },
    {
      "module": "module.fabric.module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:route-table/rtb-1a4e47a2ec7c30df9",
            "id": "rtb-1a4e47a2ec7c30df9",
            "owner_id": "222222222222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-192b03a78868517a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.30.49.237/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-3b40fc409699ab6b9"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.30.98.245/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-e7858b4c5ed6d9cdc"
              }
            ],
            "tags": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "rtb-az1-XXXX-prd-web-01",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "rtb-az1-XXXX-prd-web-01",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "timeouts": null,
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:route-table/rtb-446cbc99700bcf524",
            "id": "rtb-446cbc99700bcf524",
            "owner_id": "222222222222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-192b03a78868517a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.30.49.237/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-3b40fc409699ab6b9"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.30.122.89",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-d8a791aafdef44ca0"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.30.164.65",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-d8a791aafdef44ca0"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.30.98.245/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-e7858b4c5ed6d9cdc"
              }
            ],
            "tags": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "rtb-az1-XXXX-prd-app-01",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "rtb-az1-XXXX-prd-app-01",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "timeouts": null,
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:route-table/rtb-62beef039959107cd",
            "id": "rtb-62beef039959107cd",
            "owner_id": "222222222222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.30.200.100",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-192b03a78868517a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.30.49.237/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-3b40fc409699ab6b9"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.30.98.245/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-e7858b4c5ed6d9cdc"
              }
            ],
            "tags": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "rtb-az1-XXXX-prd-db-01",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "rtb-az1-XXXX-prd-db-01",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "timeouts": null,
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:route-table/rtb-9a295b01044590997",
            "id": "rtb-9a295b01044590997",
            "owner_id": "222222222222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.30.49.237/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-3b40fc409699ab6b9"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.30.98.245/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-e7858b4c5ed6d9cdc"
              }
            ],
            "tags": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "rtb-az1-XXXX-prd-fsx-01",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "rtb-az1-XXXX-prd-fsx-01",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "timeouts": null,
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:route-table/rtb-2634aa4bf9a5028cb",
            "id": "rtb-2634aa4bf9a5028cb",
            "owner_id": "222222222222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-192b03a78868517a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.30.49.237/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-3b40fc409699ab6b9"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.30.98.245/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-e7858b4c5ed6d9cdc"
              }
            ],
            "tags": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "rtb-az1-XXXX-prd-proxy-01",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "rtb-az1-XXXX-prd-proxy-01",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "timeouts": null,
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.fabric.module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-5577a5510a11cecf5",
            "route_table_id": "rtb-1a4e47a2ec7c30df9",
            "subnet_id": "subnet-d244fcb94b2a9cae2"
          },
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-63f135815790845c9",
            "route_table_id": "rtb-446cbc99700bcf524",
            "subnet_id": "subnet-c6a8b5620638890eb"
          },
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-f918eac4c3b08e906",
            "route_table_id": "rtb-62beef039959107cd",
            "subnet_id": "subnet-5f374bdf86f452001"
          },
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-efa7494586440d97a",
            "route_table_id": "rtb-9a295b01044590997",
            "subnet_id": "subnet-b29961b3b167b8e03"
          },
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-f521f945cdefbf041",
            "route_table_id": "rtb-2634aa4bf9a5028cb",
            "subnet_id": "subnet-2c1af4eaa890788df"
          },
          "dependencies": [
            "module.fabric.module.route_table.aws_route_table.this",
            "module.fabric.module.subnet.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.fabric.module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:subnet/subnet-d244fcb94b2a9cae2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-11a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.30.194.92/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-d244fcb94b2a9cae2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222222222222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "sub-XXXX-web-01",
              "Purpose": "XXXX Intranet Web Subnet",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "sub-XXXX-web-01",
              "Purpose": "XXXX Intranet Web Subnet",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:subnet/subnet-c6a8b5620638890eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-11a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.30.221.25/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-c6a8b5620638890eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222222222222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "sub-XXXX-app-01",
              "Purpose": "XXXX Intranet App Subnet",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "sub-XXXX-app-01",
              "Purpose": "XXXX Intranet App Subnet",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:subnet/subnet-5f374bdf86f452001",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-11a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.30.96.74/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-5f374bdf86f452001",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222222222222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "sub-XXXX-db-01",
              "Purpose": "XXXX Intranet DB Subnet",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "sub-XXXX-db-01",
              "Purpose": "XXXX Intranet DB Subnet",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          }
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:subnet/subnet-b29961b3b167b8e03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.30.27.15/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-b29961b3b167b8e03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222222222222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "sub-az1a-XXXX-prd-fsx-01",
              "Purpose": "FSx subnet",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "sub-az1a-XXXX-prd-fsx-01",
              "Purpose": "FSx subnet",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          }
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:222222222222:subnet/subnet-2c1af4eaa890788df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-11a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.30.178.7/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-2c1af4eaa890788df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222222222222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "sub-XXXX-proxy-01",
              "Purpose": "XXXX Intranet webproxy subnet",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "tags_all": {
              "Author": "Vendor",
              "Created-by": "Terraform",
              "Name": "sub-XXXX-proxy-01",
              "Purpose": "XXXX Intranet webproxy subnet",
              "agency-code": "xxxx",
              "environment": "prd",
              "project-code": "XXXX",
              "zone": "ia"
            },
            "vpc_id": "vpc-fd4f55b8a35a6bd53"
          }
        }
      ]
    }
  ]
}